# ChangeLog for net-misc/youtube-dl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/youtube-dl/ChangeLog,v 1.466 2015/04/08 13:12:47 ago Exp $

  08 Apr 2015; Agostino Sarubbo <ago@gentoo.org> youtube-dl-2015.04.03.ebuild:
  Stable for amd64, wrt bug #545484

  04 Apr 2015; Jeroen Roovers <jer@gentoo.org> youtube-dl-2015.04.03.ebuild:
  Stable for HPPA (bug #545484).

*youtube-dl-2015.04.03 (04 Apr 2015)

  04 Apr 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.03.24.ebuild,
  +youtube-dl-2015.04.03.ebuild:
  Version bump.

*youtube-dl-2015.03.28 (29 Mar 2015)

  29 Mar 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.03.18.ebuild,
  +youtube-dl-2015.03.28.ebuild:
  Version bump.

*youtube-dl-2015.03.24 (25 Mar 2015)

  25 Mar 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.03.15.ebuild,
  +youtube-dl-2015.03.24.ebuild:
  Version bump.

*youtube-dl-2015.03.18 (19 Mar 2015)

  19 Mar 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.03.09.ebuild,
  +youtube-dl-2015.03.18.ebuild:
  Version bump.

*youtube-dl-2015.03.15 (16 Mar 2015)

  16 Mar 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.03.03.1.ebuild,
  +youtube-dl-2015.03.15.ebuild:
  Version bump.

*youtube-dl-2015.03.09 (09 Mar 2015)

  09 Mar 2015; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2015.03.09.ebuild:
  Version bump.

*youtube-dl-2015.03.03.1 (04 Mar 2015)

  04 Mar 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.02.18.ebuild,
  -youtube-dl-2015.02.20.ebuild, +youtube-dl-2015.03.03.1.ebuild:
  Version bump. Fix multi-line python imports with USE=-offensive (bug #540988
  by Erik).

*youtube-dl-2015.02.20 (21 Feb 2015)

  21 Feb 2015; Jeroen Roovers <jer@gentoo.org> -youtube-dl-2015.02.16.ebuild,
  +youtube-dl-2015.02.20.ebuild:
  Version bump.

*youtube-dl-2015.02.18 (18 Feb 2015)

  18 Feb 2015; Jeroen Roovers <jer@gentoo.org> +youtube-dl-2015.02.18.ebuild,
  -youtube-dl-2015.02.11.ebuild: