@@ -5,18 +5,18 @@ DIST opera-12.16-1860.amd64.freebsd.tar.xz 13312684 SHA256 ecc001605c45baa4acf60
 DIST opera-12.16-1860.i386.freebsd.tar.xz 13385696 SHA256 dcd80ea7a8f090a47007fc630495817feeb167220b9a9bbffbf349687f3e29d3 SHA512 0bb2c0548765ea476cdb8be6c84faf1d60dddb5a2c08b7312027f4cd17fa8ebd4fbc1a97657bbcb0ac07733e5f3b340b181a307a778c38543140adbfe7f8b844 WHIRLPOOL 5703b2c736694cf6ffcf808872e72585b81c7fed9d2263d5679ee54f667f4eb6b9d34a73b80c8efc0a8640daf03da60dafa0defe0c560d3ef78f2a8a68cbb960
 DIST opera-12.16-1860.i386.linux.tar.xz 13154668 SHA256 df640656a52b7c714faf25de92d84992116ce8f82b7a67afc1121eb3c428489d SHA512 a13ec53311e3e78f35103a9dd5337c0e9a555362860213080211ee9d21de88fbd6aae03bed20b7515874d5a09dfbab108954213745fb82175f5e48e555152613 WHIRLPOOL ae1af6858847fe51dcac8cb076a67099846ad66b734ecf92780e953daec963754c9e4352e979a636eac70e785a62bd94e084124080d7fe0f59b420a99a2133cc
 DIST opera-12.16-1860.x86_64.linux.tar.xz 14018800 SHA256 b3b5cada3829d2b3b0e2da25e9444ce9dff73dc6692586ce72cfd4f6431e639e SHA512 c1289f352ea5fc8133b105771f48fdc56ccd770920330b1a0ed939ff909abc68081447673572eabeb1aae6db5194b6ab35c93afad78a91d8f7a9a0f91e81ef8b WHIRLPOOL 539cdf43b4c8175c664fbf786b27ede1d33e58c44f75229a1a50612951136f526d646f3e0444b6cc69961259c3e3ef7dbf722b520abb4d4dbb98032c4de335d1
-DIST opera-stable_28.0.1750.40_amd64.deb 42771814 SHA256 dcbafa86f3873c22322918a1a34f5592dec8ae271ca3a4a5d5624209f1d05b42 SHA512 8efcb1bd9c243915c30070f89b727cdc738093d232144e20ffecaac45ac3717c9e4a86985af0f7bda463b83b98b0baeea9c9c4527b0296cdfa051e70c1c98b7a WHIRLPOOL 8e3c0331b1015bf6f6aa28aad09c530473e30e957c40eb35070be51e5b2b98dc68b3f074995ebf635acc13e56cd9460cbd7b7177684400a4771e89453bf0cc64
 DIST opera-stable_28.0.1750.48_amd64.deb 41751808 SHA256 73c39cdbd1d1dd0a7307b1ecb938a1c4d620453d509c3f4dbcd4066c96bea2a0 SHA512 683d2f95590c55d7e87c260b5dcba08b29fcc3918b3311f4c88d0c63c35082b6a30b2b90b9d125573f1c2e850d0df48d2432e184b770a9989f51c8857ca7f317 WHIRLPOOL f4d1cc6441909f1f5d27f72d9e2b3758cdc6bd0f6d548807d8bdf80f8ad3987582df6d92bf22b6ecfb773127d9c2cef0e22d3dd4c18af1944c751bae7e7a3b80
+DIST opera-stable_28.0.1750.51_amd64.deb 43398178 SHA256 2c73cf04b70fe95e674a16c98727ba2a9a6b1fbd8bfb5df3a3ba911330c69543 SHA512 a1e41d007dbceff5b4e957200c9f55df7492e5d035825cf10da3243cd1b041b06a1ecbc692eb1c99b61b3ff12b663232684e9e8f71e50303206389bacdae068d WHIRLPOOL a2dd56ee87c7ebbb6148c6181777ceb891c0629b22a9dee1fd835f653bcd2108bb2365ab68501c5dc7ff2c46431b1b510e0cc23d7e12ba9a905faefec6804fb7
 EBUILD opera-12.16_p1860-r1.ebuild 6416 SHA256 c0e6a25423ccf0c023672f8e8363599ac446d203be810f1527a9617e33485f1f SHA512 bdf907e43b5ec76155911873eaf7a3dfab9b501ec7fdaa1c73cbbca4f8e442b46741d9d9e7b06c74483fa755b050430219622f41341eb41bd69c4f9bb56d5829 WHIRLPOOL 7ba553825397e89df91e7931d88c1502acc603bcec5455e531546e0fd75c322884ee5e3a59b54a32c6e9e53e932e20d6cd8ca0aa0e48c4b6fdfcfd1dee8bb3e2
-EBUILD opera-28.0.1750.40.ebuild 2100 SHA256 df0b3e0e49f896805f2fc1afd7ad181a5f1e1dd1bf25851af9f45dd83419cf77 SHA512 0ef5b6114202c7825564e95359b9d032f8773a60d184835956ae5a54f9204b07997ae4c8242d2a4385ae7d9e00aa6e03d45b6c3734963bf73793b8841b8b732c WHIRLPOOL b2cdcf5281c30f5d342cff9d733e40236839fd53a3ad1afa962ab3e31d55b6fc605884930af3f8e4a29b8c25494e0a33ca2daa295aee1f3558a0b04e1cd67377
 EBUILD opera-28.0.1750.48.ebuild 2100 SHA256 81ff94fa18ff966c0c947c3ad88d9386a86fdd1381b3c92b317c9c2817903d4b SHA512 1e9f0d03370a013465f3e0a2e509ba75b1b573ac6cd2180140bee49ff2a1ac42ce84a53a0cc59602178eececa2650418f2d9aa76c44ef9a6c7ac165257e61cc1 WHIRLPOOL 859f1569083873c277d72ef52ff8a6651ef28678c0bcf59de315dee412656a7d628e16d66cff6c7d2e3a4f1b2a464967f46423729d855322e26a76b0348c9b07
-MISC ChangeLog 39773 SHA256 9cdf5bc7d609bc22f341122bff2eaa41568f9142f572073a7b42e85cf34ce8b2 SHA512 46a1af16d769e043e871e0a443673292de5df2491768328c748bfe7e9d37c2fdff35141d0c0a0d84272afbe2b328697247fdae14730f4c933a1eb731fee4985d WHIRLPOOL 801723ed0e2df7f3476d937b98c06cb762ef3fc429ccd4e8dad8f20348cc02888ada41982193c4d57e67f8a9cb6e79e877a367cb45763a1d3c24c1eed0cf5571
+EBUILD opera-28.0.1750.51.ebuild 1968 SHA256 099de108fee4863c7aa5c8bbcb082f5f99f651493593a8951d7b4befbaa0e711 SHA512 6d694c7280181ab14488cfb74df06bccef0d639af573c81fd6d72736bd13d0fe156fca2f999bac6ab48fef686685dd815de42f828f5cb03756bfedc6310d15d9 WHIRLPOOL 7b9e8aeac60170565111a152471721e871de4f7ae62bd8441481ddb0850d3144572c2bd0f106c025a09fc05fdb15da63273e27dd656bf0c46b54d4feced01915
+MISC ChangeLog 40037 SHA256 640eb04644e5766344bfa4f9f7f716b044b27a273ded20739afb161b676a8615 SHA512 d0b49d1534744e031f9513e43cb0090875bfc3fa8ac372a293a61552dc7af26ea7bea19be77b1e2b60b6ca77d04108c47be25b802f72e427d6afeb1ec6df0fc8 WHIRLPOOL 7d20fbb0b3bb2cca1dd99910cb905f5e3506f4e796d36cb7a722183c9dc6b8cbf55f6868079201f8404bd9f3dfa9834c7856f84723f895faca895796a5f1e290
 MISC ChangeLog-2010 112299 SHA256 5c3b5c58119b4a6b1911d840892c42234f25dae57452287fb0a9e6cca78ed171 SHA512 9dc4dc7e7508bb1621c390837ec2e47d9e96075906b2060be419ee64e505c8f0da9e4d3a8bc7cc2de66c6efc383f026afb8fa5e886afa15da6349514a93c9edb WHIRLPOOL edaf1c2e810e91d37b2d90847640900374b447a12e2e0e927654966cc18c3a14f332ce6daa07c5a0049da06f5e89bfd0daddb5f73a4d79b334ded4397349cf7a
 MISC metadata.xml 672 SHA256 3fdb3d81bfb1c469bdf86811329eb4888ce909cce63d2aa71257b91a6f8f012e SHA512 4aae9fbf8a753b30b7ef5868b0084c1eb55ed34cc9e1ece8814db13230e07b455f45be936c810bc8a9426ce6c9eaa7449612ac50b47aad253dcae57a683b5b6a WHIRLPOOL 9dc490f6cffad6c3ff1beb27a74818fc66a194856b7d5a84972d387a6bcdf81cda95bb2d1f2b5cb9d58f47cf898bcede39b2a68fdaa5405c5efbffaa51986f3d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUJtiMACgkQVWmRsqeSphOvMACfZ4e+9Gv3AK/AfknnJsReG0O1
-Hj4An1/+vf8A/YESVEE+gml6MoGgJ4FQ
-=UQWE
+iEYEAREIAAYFAlUl9iQACgkQVWmRsqeSphPVRgCfXUW6+GQxb+zoBxf1x9ZBq2+0
+zhkAn2P6Ozl5Oa2Q/xwfbIjfS2zGsy+8
+=ujwu
 -----END PGP SIGNATURE-----
